--- a/RazorPagesMovie/Pages/Shared/_Layout.cshtml
+++ b/RazorPagesMovie/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        <li><a class="nav-link text-dark" asp-area="" asp-page="/Schedules/Index">Schedules</a></li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
