change both attritubte and element with HtmlTargetElement

--- a/AuthoringTagHelpers/Views/Home/Privacy.cshtml
+++ b/AuthoringTagHelpers/Views/Home/Privacy.cshtml
@@ -15,3 +15,6 @@
     <strong>Support:</strong><email>Support</email><br />
     <strong>Marketing:</strong><email>Marketing</email>
 </address>
+
+<p bold>Use this area to provide additional information.</p>
+<bold> Is this bold?</bold>
