condition tag helper

--- a/AuthoringTagHelpers/Views/Home/Privacy.cshtml
+++ b/AuthoringTagHelpers/Views/Home/Privacy.cshtml
@@ -1,4 +1,5 @@
-﻿@model AuthoringTagHelpers.Models.WebsiteContext
+﻿@using AuthoringTagHelpers.Models
+@model WebsiteContext
 @{
     ViewData["Title"] = "About";
 }
