avoid conflict tag helper

--- a/AuthoringTagHelpers/Views/Home/Privacy.cshtml
+++ b/AuthoringTagHelpers/Views/Home/Privacy.cshtml
@@ -18,3 +18,5 @@
 
 <h3> web site info </h3>
 <website-information info="Model" />
+
+<p>Visit us at http://docs.asp.net or at www.microsoft.com</p>
