specify view component name

--- a/StarterViewComp/Views/ToDo/Index.cshtml
+++ b/StarterViewComp/Views/ToDo/Index.cshtml
@@ -36,5 +36,5 @@
 </table>
 
 <div>
-    @await Component.InvokeAsync("PriorityList", new { maxPriority = 2, isDone = false })
+    @await Component.InvokeAsync("PriorityList", new { maxPriority = 3, isDone = true })
 </div>
