--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -5,6 +5,16 @@
 }
 
 <h1>Restaurants</h1>
+
+<form method="get">
+    <div class="form-group">
+        <div class="input-group">
+            <input type="search" value="" class="form-control" name="searchTerm" />
+            <button class="btn btn-default">Search</button>
+        </div>
+    </div>
+</form>
+
 <table class="table">
     @foreach (var restaurant in Model.Restaurants)
     {
