model biding property

--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -9,7 +9,7 @@
 <form method="get">
     <div class="form-group">
         <div class="input-group">
-            <input type="search" value="" class="form-control" name="searchTerm" />
+            <input type="search" class="form-control" asp-for="SearchTerm" />
             <button class="btn btn-default">Search</button>
         </div>
     </div>
