add detail page, specify a route param, fecth data for detail and add not found page

--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -22,6 +22,13 @@
             <td>@restaurant.Name</td>
             <td>@restaurant.Location</td>
             <td>@restaurant.Cuisine</td>
+            <td>
+                <a class="btn"
+                   asp-page="./Detail"
+                   asp-route-restaurantId="@restaurant.Id">
+                    Detail
+                </a>
+            </td>
         </tr>
     }
 </table>
