add edit page , cuisine select list

--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -28,6 +28,11 @@
                    asp-route-restaurantId="@restaurant.Id">
                     Detail
                 </a>
+                <a class="btn"
+                   asp-page="./Edit"
+                   asp-route-restaurantId="@restaurant.Id">
+                    Edit
+                </a>
             </td>
         </tr>
     }
