--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -15,6 +15,8 @@
     </div>
 </form>
 
+<a class="btn btn-success" asp-page="./Edit">Add New</a>
+
 <table class="table">
     @foreach (var restaurant in Model.Restaurants)
     {
