--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -35,9 +35,16 @@
                    asp-route-restaurantId="@restaurant.Id">
                     Edit
                 </a>
+                <a class="btn"
+                   asp-page="./Delete"
+                   asp-route-restaurantId="@restaurant.Id">
+                    Delete
+                </a>
             </td>
         </tr>
     }
 </table>
 
-<div>@Model.Message</div>
+@section footer {
+    <div>@Model.Message</div>
+}
