--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -17,33 +17,10 @@
 
 <a class="btn btn-success" asp-page="./Edit">Add New</a>
 
-<table class="table">
-    @foreach (var restaurant in Model.Restaurants)
-    {
-        <tr>
-            <td>@restaurant.Name</td>
-            <td>@restaurant.Location</td>
-            <td>@restaurant.Cuisine</td>
-            <td>
-                <a class="btn"
-                   asp-page="./Detail"
-                   asp-route-restaurantId="@restaurant.Id">
-                    Detail
-                </a>
-                <a class="btn"
-                   asp-page="./Edit"
-                   asp-route-restaurantId="@restaurant.Id">
-                    Edit
-                </a>
-                <a class="btn"
-                   asp-page="./Delete"
-                   asp-route-restaurantId="@restaurant.Id">
-                    Delete
-                </a>
-            </td>
-        </tr>
-    }
-</table>
+@foreach (var restaurant in Model.Restaurants)
+{
+    <partial name="_Summary" model="restaurant" />
+}
 
 @section footer {
     <div>@Model.Message</div>
