add viewcompoent and notice naming

--- a/OdeToFood/Pages/Shared/_Layout.cshtml
+++ b/OdeToFood/Pages/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
+            <vc:restaurant-count></vc:restaurant-count>
             @RenderSection("footer", required: false)
             &copy; 2019 - OdeToFood - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
