--- a/OdeToFood/Pages/Restaurants/Edit.cshtml
+++ b/OdeToFood/Pages/Restaurants/Edit.cshtml
@@ -26,3 +26,7 @@
     </div>
     <button class="btn btn-primary" type="submit">Save</button>
 </form>
+
+@section Scripts  {
+    <partial name="_ValidationScriptsPartial" />
+}
