--- a/OdeToFood/Pages/Restaurants/ClientRestaurant.cshtml
+++ b/OdeToFood/Pages/Restaurants/ClientRestaurant.cshtml
@@ -6,22 +6,36 @@
 
 <h1>ClientRestaurant</h1>
 
+<table id="restaurants" class="table"></table>
+
 @section Scripts  {
-    <environment include="Development">
-        <script src="~/node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
-        <script src="~/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-        <link href="~/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
-    </environment>
-    <environment exclude="Development">
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.css" />
-        <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.js"></script>
-    </environment>
-    <script>
-        $(function () {
-            $.ajax("/api/restaurants/", { method: "get" })
-                .then(function (reponse) {
-                    console.log(reponse);
+<environment include="Development">
+    <script src="~/node_modules/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="~/node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
+    <link href="~/node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+</environment>
+<environment exclude="Development">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.css" />
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.18/datatables.min.js"></script>
+</environment>
+<script>
+    $(function () {
+        var cuisines = ["Unknown", "Mexican", "Italian", "Indian"];
+        $.ajax("/api/restaurants/", { method: "get" })
+            .then(function (response) {
+                $("#restaurants").dataTable({
+                    data: response,
+                    columns: [
+                        { "data": "name" },
+                        { "data": "location" },
+                        {
+                            "data": "cuisine", "render": function (data) {
+                                return cuisines[data];
+                            }
+                        },
+                    ]
                 });
-        });
-    </script>
+            });
+    });
+</script>
 }
