--- a/BethanysPieShop/Views/Home/Index.cshtml
+++ b/BethanysPieShop/Views/Home/Index.cshtml
@@ -1,11 +1,19 @@
 ﻿@model BethanysPieShop.ViewModels.HomeViewModel
 
-<h2>@Model.Title</h2>
+<div class="col-12"><h2>@Model.Title</h2></div>
 
 @foreach (var pie in Model.Pies)
 {
-    <div>
-        <h2>@pie.Name</h2>
-        <h3>@pie.Price.ToString("c")</h3>
+    <div class="pie-cart col-sm-4 col-lg-4 col-md-4">
+        <div class="card">
+            <img class="card-img-top" src="@pie.ImageThumbnailUrl" alt="" />
+            <div class="card-body">
+                <div class="caption">
+                    <h3 class="float-right card-tex">@pie.Price.ToString("c")</h3>
+                    <h3 class="card-title">@pie.Name</h3>
+                    <p class="card-tex">@pie.ShortDescription</p>
+                </div>
+            </div>
+        </div>
     </div>
 }
