--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/site.css" rel="stylesheet" />
 </head>
-<body>
+<body class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" asp-controller="Home" asp-action="Index">Bethany's Pie Shop</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
             </ul>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="body-content">
         <div class="row">
             @RenderBody()
         </div>
