--- a/BethanysPieShop/Views/Feedback/Index.cshtml
+++ b/BethanysPieShop/Views/Feedback/Index.cshtml
@@ -4,32 +4,45 @@
     ViewData["Title"] = "Feedback";
 }
 
-<h1>Feedback</h1>
+<div class="col-12"><h1>Feedback</h1></div>
+<div class="d-flex justify-content-center w-100">
+    <form asp-action="Index" method="post" class="w-50">
+        <div class="text-danger" asp-validation-summary="All"></div>
+        <div class="form-group row">
+            <label asp-for="Name" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-8">
+                <input asp-for="Name" class="form-control" />
+                <span class="text-danger" asp-validation-for="Name"></span>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="Email" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-8">
+                <input asp-for="Email" class="form-control" />
+                <span class="text-danger" asp-validation-for="Email"></span>
 
-<form asp-action="Index" method="post">
-    <div class="form-group">
-        <label asp-for="Name" class="col-md-2"></label>
-        <div class="col-md-5">
-            <input asp-for="Name" class="form-control" />
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2"></label>
-        <div class="col-md-5">
-            <input asp-for="Email" class="form-control" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="Message" class="col-md-2"></label>
-        <div class="col-md-5">
-            <textarea asp-for="Message" class="form-control" />
-        </div>
-    </div>
-    <div class="form-group">
-        <label asp-for="ContactMe" class="col-md-2"></label>
-        <div class="col-md-5">
-            <input type="checkbox" asp-for="ContactMe" class="form-control" />
-        </div>
-    </div>
-</form>
+        <div class="form-group row">
+            <label asp-for="Message" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-8">
+                <textarea asp-for="Message"></textarea>
+                <span class="text-danger" asp-validation-for="Message"></span>
 
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="ContactMe" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-8">
+                <input type="checkbox" asp-for="ContactMe" class="form-control float-left" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-12 text-center">
+                <input type="submit" value="Send feedback" class="btn btn-primary" />
+            </div>
+        </div>
+    </form>
+
+
+</div>
