--- a/BethanysPieShop/Views/Shared/_Layout.cshtml
+++ b/BethanysPieShop/Views/Shared/_Layout.cshtml
@@ -18,6 +18,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Feedback" asp-action="Index">Feedback</a>
+                </li>
             </ul>
         </div>
     </nav>
