--- a/Globomantics/Views/Shared/LeftNav.cshtml
+++ b/Globomantics/Views/Shared/LeftNav.cshtml
@@ -12,6 +12,6 @@
         <a active-url="life" class="nav-link" asp-controller="life">Disability</a>
     </li>
     <li class="nav-item">
-        <a active-url="quote" class="nav-link" asp-action="quote" asp-controller="rent">Rent</a>
+        <a active-url="rent" class="nav-link" asp-action="quote" asp-controller="rent">Rent</a>
     </li>
 </ul>
