--- a/Globomantics/Views/Home/Index.cshtml
+++ b/Globomantics/Views/Home/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model HomeVM
-
-@section Banner {
+﻿@section Banner {
     @Html.Partial("Carousel")
 }
 
@@ -17,22 +15,12 @@
             @await Component.InvokeAsync("MortgageRates");
         </div>
         <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <h3 class="card-title">Credit Card Rates</h3>
-                    <p class="card-text">The lowest rates - guaranteed.</p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    @foreach (var creditRate in Model.CreditCardRates)
-                    {
-                        <li class="list-group-item">@creditRate.Title: @creditRate.Value%</li>
-                    }
-                </ul>
-                <div class="card-body">
-                    <p>Learn how to get 3% back on everything.</p>
-                    <a href="#" class="card-link">Learn More</a>
-                </div>
-            </div>
+            @await Component.InvokeAsync("CreditCardRates",
+                new
+                {
+                    title = "Credit Card Rates",
+                    subtitle = "The best rates around."
+                })
         </div>
     </div>
 
