implement Action Filter

--- a/Globomantics/Views/Home/Index.cshtml
+++ b/Globomantics/Views/Home/Index.cshtml
@@ -12,15 +12,14 @@
             <cdrate title="24 Month CD" term-length="Months24" meter-percent="100"></cdrate>
         </div>
         <div class="col-md-4">
-            @await Component.InvokeAsync("MortgageRates");
+            @await  Component.InvokeAsync("MortgageRates")
         </div>
         <div class="col-md-4">
-            @await Component.InvokeAsync("CreditCardRates",
-                new
-                {
-                    title = "Credit Card Rates",
-                    subtitle = "The best rates around."
-                })
+            @await  Component.InvokeAsync("CreditCardRates",
+               new {
+                   title = "Credit Card Rates",
+                   subtitle = "The best rates around."
+               })
         </div>
     </div>
 
