--- a/Globomantics/Views/Themes/Beta/Home/Index.cshtml
+++ b/Globomantics/Views/Themes/Beta/Home/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿<h1>This came from beta!</h1>
-
 <div class="container marketing">
     <div class="row">
         <div class="col-md-4">
@@ -10,15 +9,14 @@
             <cdrate title="24 Month CD" term-length="Months24" meter-percent="100"></cdrate>
         </div>
         <div class="col-md-4">
-            @await Component.InvokeAsync("MortgageRates")
+            @await  Component.InvokeAsync("MortgageRates")
         </div>
         <div class="col-md-4">
-            @await Component.InvokeAsync("CreditCardRates",
-            new
-            {
-            title = "Credit Card Rates",
-            subtitle = "The best rates around."
-            })
+            @await  Component.InvokeAsync("CreditCardRates",
+               new {
+                   title = "Credit Card Rates",
+                   subtitle = "The best rates around."
+               })
         </div>
     </div>
 
