deal with register by identity

--- a/AspNetSecurity-NoSecurity/Views/Conference/Add.cshtml
+++ b/AspNetSecurity-NoSecurity/Views/Conference/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@model AspNetSecurity_NoSecurity.Models.ConferenceModel
+﻿@using AspNetSecurityNoSecurity.Models
+@model AspNetSecurityNoSecurity.Models.ConferenceModel
 <form asp-action="Add">
     <div class="row form-group">
         <div class="col-md-2 col-md-offset-2">
