--- a/AspNetSecurity-NoSecurity/Views/Proposal/AddProposal.cshtml
+++ b/AspNetSecurity-NoSecurity/Views/Proposal/AddProposal.cshtml
@@ -1,4 +1,5 @@
-﻿@model AspNetSecurity_NoSecurity.Models.ProposalModel
+﻿@using AspNetSecurityNoSecurity.Models
+@model AspNetSecurityNoSecurity.Models.ProposalModel
 <form asp-action="AddProposal">
     <input type="hidden" asp-for="ConferenceId"/>
 
