--- a/AspNetSecurity-NoSecurity/Views/Proposal/Index.cshtml
+++ b/AspNetSecurity-NoSecurity/Views/Proposal/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<AspNetSecurity_NoSecurity.Models.ProposalModel>
+﻿@using AspNetSecurityNoSecurity.Models
+@model IEnumerable<AspNetSecurityNoSecurity.Models.ProposalModel>
 <div class="row">
     <div class="col-md-10 col-md-offset-2">
         <table class="table">
