--- a/AspNetSecurity-NoSecurity/Views/Conference/Index.cshtml
+++ b/AspNetSecurity-NoSecurity/Views/Conference/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@using AspNetSecurity_NoSecurity.Repositories
-@model IEnumerable<AspNetSecurity_NoSecurity.Models.ConferenceModel>
+﻿@using AspNetSecurityNoSecurity.Models
+@using AspNetSecurityNoSecurity.Repositories
+@model IEnumerable<AspNetSecurityNoSecurity.Models.ConferenceModel>
 @inject AttendeeRepo AttendeeRepo
 <div class="row">
     <div class="col-md-10 col-md-offset-2">
@@ -28,4 +29,9 @@
 
     </div>
 </div>
+@foreach (var claim in User.Claims)
+{
+    <dt>@claim.Type</dt>
+    <dd>@claim.Value</dd>
 
+}
