--- a/AspNetSecurity-NoSecurity/Views/Account/Register.cshtml
+++ b/AspNetSecurity-NoSecurity/Views/Account/Register.cshtml
@@ -32,13 +32,13 @@
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
-    @*<div class="form-group">
-            <label asp-for="BirthDate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="BirthDate" type="date" class="form-control" />
-                <span asp-validation-for="BirthDate" class="text-danger"></span>
-            </div>
-        </div>*@
+    <div class="form-group">
+        <label asp-for="BirthDate" class="col-md-2 control-label"></label>
+        <div class="col-md-10">
+            <input asp-for="BirthDate" type="date" class="form-control" />
+            <span asp-validation-for="BirthDate" class="text-danger"></span>
+        </div>
+    </div>
     <div class="form-group">
         <label asp-for="Role" class="col-md-2 control-label"></label>
         <div class="col-md-5 radio">
