pass data between tag helper

--- a/WebAppTagHelper/Views/Home/Index.cshtml
+++ b/WebAppTagHelper/Views/Home/Index.cshtml
@@ -11,3 +11,10 @@
 <my-customer info="Igor"></my-customer>
 
 <auto-price make="chevy" model-name="camero"></auto-price>
+
+<tab active-page="Sessions">
+    <tab-item title="Home"></tab-item>
+    <tab-item title="Speakers"></tab-item>
+    <tab-item title="Sessions"></tab-item>
+    <tab-item title="Registration"></tab-item>
+</tab>
